@@ -1,3 +1,7 @@
+Sun May  4 21:53:07 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gtkgame.c: cleanup use of the word 'session' 
+
 Sat May  3 00:07:21 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gtkgame.c, play.c: allow double command to be used for beavers.
